test/syntax/fail/not_combinatorial/let_init_pre.sync
let x = 0 -> pre true
